<resources>
    <string name="app_name">image-labeling-android</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="try_again">Try again</string>
    <string name="something_went_wrong">Something went wrong… Please, try again.</string>

    <string name="select_domain_fragment_toolbar_text">Domain Selection</string>
    <string name="select_domain_fragment_no_domain_yet">It looks like that there is no Domain yet… Please, insert at least one to start labeling</string>

    <string name="domain_detail_fragment_id_field_title_text_view">id:</string>
    <string name="domain_detail_fragment_description_field_title_text_view">Description:</string>
    <string name="domain_detail_fragment_classes_label_text_view">Classes:</string>
    <string name="domain_detail_fragment_edit_dialog_title">Edit domain description</string>
    <string name="domain_detail_fragment_edit_dialog_hint">Type the new domain description</string>
    <string name="domain_detail_fragment_image_class_creation_dialog_title">Image class creation</string>
    <string name="domain_detail_fragment_image_class_creation_dialog_hint">Type the image class name</string>
    <string name="domain_detail_fragment_delete_domain_dialog_title">Deleting domain</string>
    <string name="domain_detail_fragment_delete_domain_dialog_body">Are you sure you want to delete this domain?</string>
    <string name="domain_detail_fragment_no_classes_yet">It looks like that there is no Classes yet… Please, insert at least one to start labeling</string>

    <string name="image_classification_fragment_id_label_text_view">id:</string>
    <string name="image_classification_fragment_name_label_text_view">Name:</string>
    <string name="image_classification_fragment_search_term_label">Search Term:</string>
    <string name="image_classification_fragment_discard_button_label">Discard</string>
    <string name="image_classification_fragment_show_next_image_button_label">Show next image</string>
    <string name="image_classification_fragment_confirm_button_label">Confirm</string>
    <string name="image_classification_fragment_delete_dialog_caution_text">Are you sure you want delete this image class?</string>
    <string name="image_classification_fragment_delete_dialog_yes_button_text">Yes</string>
    <string name="image_classification_fragment_delete_dialog_no_button_text">No</string>
    <string name="image_classification_fragment_image_fetch_failed_message">It was not possible to load this resource</string>
    <string name="image_classification_fragment_no_more_images">Sorry… there is no more images for the search term you provided</string>

    <string name="class_creation_dialog_title">Class creation</string>
    <string name="class_creation_dialog_hint">Type the class name</string>
    <string name="class_editing_dialog_title">Class editing</string>
    <string name="class_editing_dialog_hint">Type the new class name</string>
    <string name="domain_creation_dialog_title">Domain creation</string>
    <string name="domain_creation_dialog_hint">Type the domain name</string>
    <string name="domain_editing_dialog_title">Domain editing</string>
    <string name="domain_editing_dialog_hint">Type the new domain name</string>

</resources>
