<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/PURPLE50">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/domain_detail_fragment_toolbar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/domain_detail_fragment_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/domain_detail_fragment_toolbar_back_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="6dp"
                    android:paddingBottom="6dp"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/domain_detail_fragment_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/WHITE"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Domain Name" />

                <ImageView
                    android:id="@+id/domain_detail_fragment_toolbar_delete_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_delete" />

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/domain_detail_fragment_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/domain_detail_fragment_id_field_title_text_view"
                android:textAllCaps="true"
                android:textColor="@color/WHITE"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/domain_detail_fragment_toolbar" />

            <TextView
                android:id="@+id/domain_detail_fragment_domain_id_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/WHITE"
                app:layout_constraintStart_toEndOf="@+id/domain_detail_fragment_id_label"
                app:layout_constraintTop_toTopOf="@+id/domain_detail_fragment_id_label"
                tools:text="001" />

            <TextView
                android:id="@+id/domain_detail_fragment_description_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/domain_detail_fragment_description_field_title_text_view"
                android:textColor="@color/WHITE"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/domain_detail_fragment_id_label" />

            <TextView
                android:id="@+id/domain_detail_fragment_domain_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:textColor="@color/WHITE"
                app:layout_constraintStart_toEndOf="@+id/domain_detail_fragment_description_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/domain_detail_fragment_description_label_text_view"
                tools:text="001" />

            <ImageView
                android:id="@+id/domain_detail_fragment_domain_description_edit_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="6dp"
                android:padding="4dp"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@+id/domain_detail_fragment_domain_description_text_view"
                app:layout_constraintStart_toEndOf="@+id/domain_detail_fragment_domain_description_text_view"
                app:layout_constraintTop_toTopOf="@+id/domain_detail_fragment_description_label_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/domain_detail_fragment_classes_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/domain_detail_fragment_toolbar_view"
            tools:visibility="gone">

            <TextView
                android:id="@+id/domain_detail_fragment_classes_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/domain_detail_fragment_classes_label_text_view"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/domain_detail_fragment_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/domain_detail_fragment_classes_label_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/something_went_wrong_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/something_went_wrong_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="40dp"
                android:text="@string/something_went_wrong"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/try_again_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/try_again"
                android:textColor="@color/WHITE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/something_went_wrong_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/empty_domain_list_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="40dp"
            android:text="@string/domain_detail_fragment_no_classes_yet"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="25sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/content_loading_progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:indeterminate="false"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/domain_detail_fragment_toolbar_view"
            tools:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/domain_detail_fragment_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>